add new materials

--- a/DIS-ANN-and-DL/assignment1_template.ipynb
+++ b/DIS-ANN-and-DL/assignment1_template.ipynb
@@ -529,7 +529,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.4 ('dis_py310')",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -543,7 +543,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.8.5"
   },
   "toc": {
    "base_numbering": 1,
@@ -586,11 +586,6 @@
     "_Feature"
    ],
    "window_display": false
-  },
-  "vscode": {
-   "interpreter": {
-    "hash": "823ced02a4c06fdc704ca2ddc861142e9ba58a574b7efc036227e6c275405131"
-   }
   }
  },
  "nbformat": 4,
